<resources>
    <string name="app_name">1MWTT AR/VR Quiz App</string>
    <!--Intro Text strings-->
    <string name="thankyou">One Million Women to Tech would like to thank Mara Catalina for two weeks of expert hands-on virtual reality and augmented reality training.</string>
    <string name="instructions">Scroll through the course screenshots and test your knowledge of AR and VR by answering the questions below.</string>
    <string name="invitation">Then come join the fun at:</string>
    <string name="url">https://github.com/1millionwomentotech/toolkitten/tree/master/summer-of-code</string>
    <!--Image 1: Topic List for weeks 1 and 11 -->
    <string name="w10_11_topics">Summer of Code Weeks 10 and 11 Topics</string>
    <!--Question 1: Question text -->
    <string name="question1">Q1. Which of the following have VR applications? (Select all that apply):</string>
    <!--Question1 Checkbox Answer strings: (all of them are true)-->
    <string name="q1_ckbox1">Architecture</string>
    <string name="q1_ckbox2">Hospitality</string>
    <string name="q1_ckbox3">Sports</string>
    <string name="q1_ckbox4">Arts</string>
    <string name="q1_ckbox5">Teaching</string>
    <string name="q1_ckbox6">Medicine</string>
    <!--Image Descriptions-->
    <string name="logo">One Million Women to Tech logo</string>
    <string name="vr">Objects created by  virtual reality students</string>
    <string name="ar">Scroll down to submit and see objects created by  augmented reality students </string>
    <!--Question2 and Radio Answer strings (Correct Answer is: One main Camera)-->
    <string name="question2">Q2. According to best practice, how many cameras should be used for AR/VR experiences?</string>
    <string name="q2_ckbox1">One main Camera</string>
    <string name="q2_ckbox2">Two main cameras</string>
    <string name="q2_ckbox3">More than 2 cameras</string>
    <!--Question3 and Radio Answer strings (Correct Answer is: true)-->
    <string name="question3">Q3. Cloud targets are targets that exist on your account database rather than on the device?</string>
    <string name="q3_true">True</string>
    <string name="q3_false">False</string>
    <!--Question4 User Input: Correct Answer is: OnTriggerEnter-->
    <string name="question4">Q4. ______________ is called when the other collider enters the trigger.</string>
    <string name="hint">Hint: Tap here and type "three words in one":</string>
    <!--Text on Buttons-->
    <string name="grade_question_1">SUBMIT Q1</string>
    <string name="grade_question_2">SUBMIT Q2</string>
    <string name="grade_question_3">SUBMIT Q3</string>
    <string name="grade_question_4">SUBMIT Q4</string>
    <string name="grade_quiz">Total Quiz Score</string>
    <!--Results -->
    <string name="results">Here are your quiz results:</string>
    <string name="q1_results">Question 1:</string>
    <string name="q2_results">Question 2:</string>
    <string name="q3_results">Question 3:</string>
    <string name="q4_results">Question 4:</string>
    <string name="final_score">Final Score:</string>
    <string name="feedback">Tell us what you think!</string>
</resources>
