<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.a1millionwomentotech.android.a1mwttarvrquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_pink_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image_view"
            android:contentDescription="@string/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/omwtt_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/thankyouMara" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/instructions" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:text="@string/invitation" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:autoLink="web"
            android:text="@string/ghrepo_url"
            android:textColor="#690039" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/w10_11_topics" />

        <ImageView
            android:id="@+id/topics-image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/topics" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            style="@android:style/TextAppearance.Large"
            android:text="@string/question1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">

            <CheckBox
                android:id="@+id/q1_ckbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ckbox1"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/q1_ckbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ckbox2"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp" >

            <CheckBox
                android:id="@+id/q1_ckbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ckbox3"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/q1_ckbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ckbox4"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp" >

            <CheckBox
                android:id="@+id/q1_ckbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ckbox5"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/q1_ckbox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_ckbox6"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <ImageView
            android:id="@+id/vr1_view_view"
            android:layout_width="wrap_content"
            android:layout_height="227dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/vr1"
            android:scaleType="fitStart"
            android:src="@drawable/vr1_9_18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <RadioGroup
            android:id="@+id/radio_q2_cameras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.Large"
                android:text="@string/question2" />

            <RadioButton
                android:id="@+id/radioq2one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_radio_one"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioq2two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_radio_two"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioq2more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_radio_more"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <ImageView
            android:id="@+id/vr1_view_view"
            android:layout_width="wrap_content"
            android:layout_height="227dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/vr1"
            android:scaleType="fitStart"
            android:src="@drawable/vr2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <RadioGroup
            android:id="@+id/radio_q3_cloud_targets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.Large"
                android:text="@string/question3" />

            <RadioButton
                android:id="@+id/radioq3true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_true"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioq3false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_false"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <ImageView
            android:id="@+id/vr1_view_view"
            android:layout_width="wrap_content"
            android:layout_height="227dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/vr1"
            android:scaleType="fitStart"
            android:src="@drawable/vr3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            style="@android:style/TextAppearance.Large"
            android:text="@string/question4" />


        <EditText
            android:id="@+id/q4_text_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:hint="Name is three words in one"
            android:inputType="textCapWords" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <ImageView
            android:id="@+id/vr1_view_view"
            android:layout_width="wrap_content"
            android:layout_height="227dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/vr1"
            android:scaleType="fitStart"
            android:src="@drawable/ar1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <ImageView
            android:id="@+id/vr1_view_view"
            android:layout_width="wrap_content"
            android:layout_height="227dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/vr1"
            android:scaleType="fitStart"
            android:src="@drawable/ar2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

        <RelativeLayout android:id="@+id/RelativeLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <Button
                android:id="@+id/button_gradeMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:onClick="submitAnswers"
                android:text="Submit Your Responses" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="#690039" />

    </LinearLayout>
</ScrollView>